PIVOT-1039:  Address the remaining deprecation warnings (about Class.newInstance) in all the source. The remaining warnings are about the deprecation of JApplet, which is another WHOLE issues entirely.
git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@1840595 13f79535-47bb-0310-9956-ffa450edef68